# FI-MCP

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
fi_mcp/: __init__.py  __main__.py  introspection.py  schema_generator.py  server.py
tests/: test_basic.py  test_docstring_validation.py
