[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fi-mcp"
version = "0.1.0"
description = "MCP server for the Financial Independence community"
readme = "README.md"
authors = [
    {name = "Brad Busenius"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "fi @ git+https://github.com/bbusenius/FI.git",
    "diablo_python @ git+https://github.com/bbusenius/Diablo-Python.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[project.scripts]
fi-mcp = "fi_mcp.server:main"

[tool.setuptools]
packages = ["fi_mcp"]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.flake8]
# Note: flake8 doesn't support pyproject.toml, so this is documented here
# but actual config is in .flake8 file
# ignore = D100,D101,D202,D204,D205,D400,D401,E303,E501,W503,N805,N806
